Chore: Remove bloating comments, rename and introduce new backend formatter directives